# Cliente-Servidor-Tensorflow

./: README.md  main.py  pyproject.toml  requirements.txt
cifar10/: ddp.py  eval.py  load_data.py  local.py  main.py  metrics.py  model.py  train.py
evaluate/: __init__.py  conf_matrix.py  evaluate_train.py
train/: __init__.py  grad_norm.py  train_minibatch.py
utils/: __init__.py  format_elapse.py  plots.py
