[project]
name = "cliente-servidor-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]

[tool.black]
line-length = 88

[tool.isort]
line-length = 88
