[project]
name = "cliente-servidor-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]

[tool.black]
line-length = 88

[tool.isort]
line-length = 88
